# advance-python

./: .gitignore  requirements.txt
hw1/: AST.py  fib.py
hw2/: Dockerfile  README.md  latex.py  solve_tasks.py
hw2/artifacts/: easy_table.tex  medium_table.tex
hw2/package_hw1/: README.md  pyproject.toml
hw2/package_hw1/src/hw1_pestova/: AST.py
hw3/: README.md  hashed_matrix.py  matrix.py  matrix_mixin.py  solve_tasks.py
hw3/artifacts/hard/: A.txt  AB.txt  B.txt  C.txt  CD.txt  hash.txt
hw4/: easy.py  hard.py  medium.py
hw4/artifacts/: easy.txt  hard_log.txt
hw4/artifacts/medium/: table.csv
hw5/: Dockerfile  README.md  easy.py
hw5/artifacts/easy/: easy.txt
